
    - mailing list support was modernized a bit; the format changed (see the
      ~mu4e-mailing-lists~ and ~mu4e-user-mailing-lists~ docstrings. There is
      ~M-x mu4e-mailing-list-info-refresh~ to update to the new values after
      changing them.

    - also, there are now actions ('a' in view/header) to get to online archives
      for some (selected) mailing-list archives.

    - In the main-view, by default ~q~ is now bound to ~mu4e-main-quit-or-bury~,
      which calls either ~mu4e-quit~ or, with prefix argument, ~bury-buffer~.

    - ~mu4e~ benefits from the mentioned speed-ups in querying, and adds some of
      its own - e.g., for showing 500 messages (debug build), we went from 642ms
      to 247ms. Note, the optimizations are experimental, and for now you can
      turn them off by setting =mu4e-mu-allow-temp-file= to =nil= (and restart
      ~mu4e~); and reporting.

    - after retrieving mail (~mu4e-update-mail-and-index~), save the output of the
      retrieval command in a buffer =*mu4e-last-update*=, = which can be useful
      for diagnosis.

* 1.10 (released on March 26, 2023)

*** mu

   - a new command-line parser, which allows (hopefully!) for a better user
     interaction; better error checking and more

   - Invalid e-mail addresses are no longer added to the contacts-cache.

   - The ~cfind~ command gained ~--format=json~, which makes it easy to further
     process contact information, e.g. using ~jq~. See the manpage for more
     details.

   - The ~init~ command learned ~--reinit~ to reinitialize the database with the
     settings of an existing one

   - The ~script~ command is gone, and integrated with ~mu~ directly, i.e. the
     scripts (when enabled) are directly visible in the ~mu~ output. Also see the
     Guile section.

   - The ~extract~ command gained the ~--uncooked~ option to tell it to _not_ replace
     spaces with dashes in extracted filenames (and a few other things).
